# simple_coro

./: Cargo.toml  README.md  docs.md
.github/workflows/: rust.yml
examples/: closure.rs  doubling.rs  parsing_9p.rs  parsing_9p_fns.rs  parsing_9p_string.rs  poll_test.rs  shared_state_refs.rs
src/: lib.rs
tests/: chained.rs  closures.rs  threads.rs
